# mulan-bi-platform

./: .env.docker.example  .env.example  .gitignore  .mcp.json  .mcpignore  AGENTS.md  AGENT_PIPELINE.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  IMPLEMENTATION_BLOCKER.md  IMPLEMENTATION_NOTES.md  LICENSE  README.md  RealWorld_Risk_Check.md  Refactor_Instructions.md  SECURITY.md  SESSION.md  SPEC_Compliance_Check.md  TESTER_FAIL.md  TESTER_PASS.md  UI_FIX_SPECS.md  commitlint.config.js  ddl_check_report.html  deploy-test.sh  docker-compose.dev.yml  docker-compose.yml  requirements.txt  start-all.sh  start-dev.sh
backend/: .coveragerc  .env.example  .ruff.toml  Dockerfile  IMPLEMENTATION_NOTES.md  alembic.ini  check_grant.py  check_load2.py  pyproject.toml  pytest.ini  requirements.txt  run.py  run_e2e_tests.py  start.sh
backend/alembic/: env.py
backend/app/: main.py
backend/config/: capabilities.yaml  data_agent_derived_metrics.yaml  token_budget.yaml
backend/models/: __init__.py  conversations.py  dqc.py  governance.py  metrics.py  metrics_maintenance_window.py
backend/scripts/: build_semantic_embeddings.py  check_keywords.py  check_load.py  check_truncate.py  cleanup_test_metrics.py  seed_skill_md_contracts.py  seed_skills.py  seed_smoke.py
backend/services/: conversation_service.py
backend/tests/: conftest.py  test_agent_api.py  test_agent_conversations.py  test_agent_fast_answer.py  test_agent_feedback_run_scoping.py  test_agent_schema_inventory_api.py  test_agent_stream_keepalive.py  test_agent_stream_persistence.py  test_asset_chat.py  test_auth.py  test_auth_service.py  test_chat_ask_data_api.py  test_crypto.py  (+39 more)
(+1505 files in other folders)
